<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="org.sabaini.moodtracker.presentation.screens.settings.SettingsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".presentation.screens.settings.SettingsFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/settings_screen"
            android:textAppearance="?attr/textAppearanceHeadline5" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchDarkMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="@{viewModel.isDarkMode}"
            android:paddingVertical="8dp"
            android:text="@string/dark_mode" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnClearData"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="start|center_vertical"
            android:paddingVertical="8dp"
            android:text="@string/clear_all_data"
            android:textColor="@android:color/holo_red_dark"
            app:icon="@android:drawable/ic_menu_delete"
            app:iconTint="@android:color/holo_red_dark" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="16dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_info"
            android:textAppearance="?attr/textAppearanceSubtitle1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@{@string/version(viewModel.appVersion)}"
            tools:text="Version: 1.0" />

    </LinearLayout>

</layout>
