<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="org.sabaini.moodtracker.presentation.screens.statistics.StatisticsViewModel" />

        <variable
            name="filterType"
            type="org.sabaini.moodtracker.presentation.screens.statistics.StatisticFilterType" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/filterGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/week_stats"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week"
                android:textAllCaps="false"
                android:textColor="@color/filter_button_text_color"
                app:backgroundTint="@color/filter_button_background_tint"
                app:strokeColor="@color/filter_button_stroke_color" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/month_stats"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month"
                android:textAllCaps="false"
                android:textColor="@color/filter_button_text_color"
                app:backgroundTint="@color/filter_button_background_tint"
                app:strokeColor="@color/filter_button_stroke_color" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/year_stats"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:textAllCaps="false"
                android:textColor="@color/filter_button_text_color"
                app:backgroundTint="@color/filter_button_background_tint"
                app:strokeColor="@color/filter_button_stroke_color" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/all_stats"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_the_time"
                android:textAllCaps="false"
                android:textColor="@color/filter_button_text_color"
                app:backgroundTint="@color/filter_button_background_tint"
                app:strokeColor="@color/filter_button_stroke_color" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/moods_stats"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filterGroup"
            tools:listitem="@layout/statistic_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>